--- a/TR/TP/5/5.md
+++ b/TR/TP/5/5.md
@@ -10,12 +10,6 @@
 
 ### 1. Configuration d'une machine hôte
 
-TODO 4, 5, 6, 7, 8
-
-4. La machine a bien 2 adresses IPv6, la première est un lien local et la deuxieme est une adresse de serveur global.
-  1. La première (*link-local*) sert à TODO
-  2. La deuxième sert à TODO
-
 ```text
 root@knuth88:~ # ifconfig
 bge0: flags=8802<BROADCAST,SIMPLEX,MULTICAST> metric 0 mtu 1500
@@ -42,11 +36,15 @@ lo0: flags=8049<UP,LOOPBACK,RUNNING,MULTICAST> metric 0 mtu 16384
 	nd6 options=21<PERFORMNUD,AUTO_LINKLOCAL>
 ```
 
-5. Le préfixe du routeur Cisco est `8800`. TODO expliquer comment on a trouvé. Le préfixe du site est donc `2001:660:5301`.
+4. La machine a bien 2 adresses IPv6, la première est un lien local et la deuxieme est une adresse de serveur global.
+	  1. La première (*link-local fe80::da9e:f3ff:fe09:3850*) est utilisable seulement sur le réseau local, elle est non routable. Elle sert lors de la phase d'autoconfiguration sur un réseau.
+	  2. La deuxième (*2001:660:5301:8800:da9e:f3ff:fe09:3850*) correspond à une adresse unicast globale, routable sur internet.
 
-6. TODO Préfixe local ...5301:8800 / Partie locale fe80
+\newpage
 
-7. TODO commenter les lignes intéressantes
+5. Le préfixe du sous-réseau contient 64 bit, 48 bits pour le préfixe de site et 16 bits pour celui du sous-réseau. Le préfixe diffusé par le routeur Cisco sur le réseau de la salle est `8800` et le préfixe du site est `2001:660:5301`.
+
+6. La partie *local* de l'adresse est `da9e:f3ff:fe09:3850`. Elle est la même pour l'adresse globale (autoconfigurée) et pour l'adresse locale. Elle est calculée à partir de l'adresse Ethernet et d'un préfixe sur 64 bits. On remarque que les 16 derniers bits de la partie locale correspondent aux 16 derniers bit de l'adresse Ethernet. En effet `ff:fe` à été ajouté au milieu de l'adresse Ethernet `d8:9e:f3:09:38:50`, et une opération à été effectuée sur les 4 premiers octets de l'adresse Ethernet pour construire la partie local de l'adresse IPv6.
 
 ```text
 root@knuth88:~ # netstat -rn
@@ -76,28 +74,31 @@ fe80::1%lo0                       link#3                        UHS         lo0
 ff02::/16                         ::1                           UGRS        lo0
 ```
 
-8. TODO regarder paquet ICMPv6
+7. On peut observer l'adresse du réseau et nos adresses IPv6 comme adresses de destination, toutes accessible directement. On observe aussi que l'adresse par défaut est un *link-local*.
+
+8. On retrouve bien dans les paquets les informations sur l'adresse IPv6 du réseau et l'adresse par défaut du routeur de sortie.
+
+\newpage
 
 ### 2. Connectivité IP mondiale -- Cohabitation IPv4/IPv6
 
-2. Le protocole utilisé pour effectuer la resolution d'adresse Ethernet en IPv6 est le protocole *Neighbor discovery* il fonctionne à l'aide de caches. Chaques serveurs et clients qui utilisent ce protocole gère son Neighbor cache, son Destination cache, son Prefix cache et son Default Router cache.
-Les paquets ICMPv6 qu'on retrouve sont des paquets contenant une Neighbor solicitation qui permet de déterminer l'adresse de son destinataire et de vérifier qu'elle est accessible, et un autre contenant une Neighbor advertisement pour y répondre.
+2. Le protocole utilisé pour effectuer la résolution d'adresse Ethernet en IPv6 est le protocole *Neighbor discovery*, qui fonctionne à l'aide de caches. Chaque serveur et client qui utilise ce protocole gère son *Neighbor cache*, son *Destination cache*, son *Prefix cache* et son *Default Router cache*.
+Les paquets ICMPv6 qu'on retrouve sont des paquets contenant une *Neighbor solicitation* qui permet de déterminer l'adresse de son destinataire et de vérifier qu'elle est accessible, et un autre contenant une *Neighbor advertisement* pour y répondre.
 
-3. TODO résolution DNS en IPv4 ou IPv6 ? pourquoi ?
+3. Pour certaines commandes comme `ping` ou `wget`, la résolution DNS se fait en IPv4 car une option existe pour résoudre en IPv6 (`ping6` et `wget -6`), les autres commandent sont résolues en IPv6. Les paquets IPv6 sont plus faciles à utiliser.
 
-4. TODO comparer format (datagramme) IPv4 et IPv6
+4. Les formats des paquets IPv4 et IPv6 sont un peu différents, l'entête des paquets IPv6 a été simplifié. Il y a moins de champs dans l'entête IPv6. Il n'y a plus `checksum`, ni `champ fragmentation` ou `option`. La taille d'un entête IPv6 est fixe alors que celle de l'entête IPv4 est variable.
 
 ### 3. Configuration d'un réseau test
 
+3. La connectivité IPv6 avec le Cisco est toujours présente (on a fait un `ping` vers son adresse). Non, le routeur A ne peut pas communiquer avec le reste du monde, lorsque l'on fait `ping6 www.google.com` on obtient l'erreur `No route to host`. En effet, on n'a plus d'adresse par défaut dans la partie Internet6 de `netstat -r` (même si on a toujous une adresse par défaut pour l'IPv4). Pour remédier à ce problème, on a ajouté l'adresse du routeur Cisco par défaut pour IPv6 avec : `route add -inet default 2001:660:5301:8800::1000`.
 
-3. La connectivité IPv6 avec le Cisco est toujours présente (on a fait un `ping` vers son adresse). Non le routeur A ne peut pas communiquer avec le reste du monde, lorsque l'on fait `ping6 www.google.com` on obtient l'erreur `No route to host`. En effet on n'a plus d'adresse par défaut dans la partie Internet6 de `netstat -r` (même si on a toujous une adresse par défaut pour l'IPv4). Pour remédier à ce problème on a ajouté l'adresse du routeur Cisco par défaut pour IPv6 avec : `route add -inet default 2001:660:5301:8800::1000`.
+4. La machine B a bien une adresse IPv6 globale, elle est calculée à partir de l'adresse globale mise dans le fichier `rc.conf` pour bge0 sur la machine A.
 
-4. La machine B a bien une adresse IPv6 globale, elle est calculé à partire de l'adresse globale mise dans le fichier rc.conf pour bge0 sur la machine A.
-Elle est calculé grâce à TODO
-
-5. On voit qu'au lancement de la machine des paquets ICMPv6 contenant le protocole Neighbor discovery sont échangés pour définir l'adresse global IPv6.
+5. On voit qu'au lancement de la machine, des paquets ICMPv6 contenant le protocole *Neighbor discovery* sont échangés pour définir l'adresse globale IPv6.
 
 ### 4. Établir la connectivité IPv6, protocole de routage RIPng
 
-4. Nous ne pouvons pas acceder en IPv6 à des machines exterieurs depuis la machine B, car ....
-TODO 4, 6, 8, 9, 10
+4. Nous ne pouvons pas accéder en IPv6 à des machines exterieures depuis la machine B, car il n'y a pas la connectivité IPv6.
+
+6. Les routeurs envoient bien des paquets sur les deux interfaces. Dans les paquets RIPng on peut observer dans l'adresse du réseau local avec une métrique de 1.
