SI - Mardi 21 Janvier

--- a/S8/SI/1.md
+++ b/S8/SI/1.md
@@ -89,6 +89,33 @@ Remplissage de polygones (p25) : "Un fragment est généré si le centre du pixe
 
 Remplissage de lignes (p26) : "Un fragment est généré si la ligne intersecte le losange"
 
+### Pipeline complet
+
+En plus du fragment et vertex shader, il existe geometry et tesselation shader.
+
+## Transformation 3D -> 2D / Perspective
+
+**Slide :** <http://www-evasion.imag.fr/~Georges-Pierre.Bonneau/COURS_CG/Cours2_PERSPECTIVE.pdf>
+--> nouveau fichier/chapitre ?
+
+## Points, vecteurs et perspective
+
+**Slide :** <http://www-evasion.imag.fr/~Georges-Pierre.Bonneau/COURS_CG/Cours2_GEOMETRIE_COORDONNEES_HOMOGENES.pdf>
+
+```text
+typedef Point float[2];
+typedef Vecteur float[2];
+```
+
+*Quelle différence entre les deux types ? Les opérations qu'on peut faire dessus.*
+
+> CL = Combinaison Linéaire
+
+- Vecteur CL Vecteur = Vecteur
+- Point CL Vecteur = Point (déplacé)
+- Point CL Point = autorisé seulement si combinaison barycentrique (la somme des coefficients vaut 1)
+-
+
 
 
 
