TS : Correction typo cours 1

--- a/S8/TS/1.md
+++ b/S8/TS/1.md
@@ -28,7 +28,7 @@ On passe de $x(t)$ à $x[k]$ en échantillonnant à une période ${1 \over F_e} 
 
 > *Notation.* Minuscule en temps, majuscules après transformée
 
-**Théorème de Shannon.** $F_{\max} < {F_e \over 2} ou autrement écrit $F_e > 2F_{\max}$
+**Théorème de Shannon.** $F_{\max} < {F_e \over 2}$ ou autrement écrit $F_e > 2F_{\max}$
 
 ![Illustration du théorème de Shannon](2.jpg)
 
