--- a/RI/1.md
+++ b/RI/1.md
@@ -74,6 +74,33 @@ $$
 P_{exp}(\text{ de }) * 416 = 0,053 * 416 = 22
 $$
 
+## Représentation vectorielle des documents
+
+On associe à chaque document d'un vecteur $d$ dont la dimension correspond à la taille du vocabulaire ($d \in \mathbb{R}^{|V|}$). Chaque élément $w_i$ (*weight*) du vecteur $d$ correspond à l'importance ($w_i \in \mathbb{R}_+$) du mot $t_i$.
+
+Ce poids $w_i$ se calcule :
+
+- En multipliant un coefficient de **normalisation** $n_d$ *(facultatif)*
+- Par la **caractérisation** du terme dans le **document** : est-ce que le mot est très présent à l'intérieur du document ? $p_{tf_{t_i,d}}$ (pour *term frequency*).
+- Et par la **caractérisation** du terme dans le **corpus** : est-ce que le mot est très présent à l'intérieur de l'ensemble des documents ? $p_{df_{t_i}}$ (pour *document frequency*). Elle est **petite** quand le le mot est très présent dans les autres documents (et inversement).
+
+$$
+\forall d \in \mathcal{C}, \forall i \in \{1,...,V\},\;\;w_{id} = n_d \times p_{tf_{t_i,d}} \times p_{df_{t_i}}
+$$
+
+> - Un **terme peu discriminant** se trouve dans beaucoup de documents, ce qui ne va pas être très utile pour les filtrer : **$p_{df} \simeq 0$**
+> - À l'inverse, un **terme très discriminant** se trouve dans très peu de documents, ce qui va être utile pour les filtrer : **$p_{df} >> 0$**. *Si on cherche un de ces documents à l'aide de ce terme on n'aura que peu de résultats dans lesquels fouiller.*
+
+La normalisation vise à régler le problème de **taille de document** : donner autant d'importance aux documents courts qu'aux documents long (qui ont de par leur nature des poids plus grands).  
+
+En cours on choisit :
+
+- $p_{tf_{t_i,d}} = tf_{t_i,d}$
+- $p_{df_{t_i}} = idf_{t_i}( = ln {N \over df_{t_i}})$, avec $N$ le nombre de documents dans le corpus.
+- $n_d = 1$
+
+
+
 
 
 .
