CL - Jeudi 23 Janvier

--- a/CL/1.md
+++ b/CL/1.md
@@ -28,7 +28,7 @@ Principes généraux : analyse (déconstruction) et génération (construction).
 
 Niveaux de descriptions : **lexical** - morphologique (mot), **syntaxique** (phrase), **sémantique** (sens), **pragmatique** (sens avec le contexte).
 
-## Représentation et codage de texte (Unicode)
+## 2.1 Représentation et codage de texte (Unicode)
 
 **Slide** : <http://www-clips.imag.fr/geod/User/laurent.besacier/CoursCL2011/2.1.pdf>
 
@@ -54,7 +54,34 @@ Unicode et Python : <https://docs.python.org/2/howto/unicode.html>
 
 **Normalisation.** Pour comparer deux chaînes de caractères il ne faut pas comparer les octets en mémoire, il faut les normaliser avant pour qu'elles utilisent un même encodage.
 
+## 2.2 Théorie de l'information et probabilités
 
+**Slide** : <http://www-clips.imag.fr/geod/User/laurent.besacier/CoursCL2011/2.2.pdf>
 
+**Loi de Zipf.** $f \times r = k$ avec $f$ le nombre d'occurences et $r$ le rang *(comme en cours de MRI)*
 
-.
+**Estimation par maximum de vraisemblance.** $p(w) = {\text{count}(w) \over \sum_{w'} \text{count}(w')}$
+
+*Formalisation.* $P(W = w) = p(w)$ : si je tire un mot au hasard, quelle est la probabilité que ce mot soit $w$ ?
+
+**Probabilités conjointes.** $p(w_1, w_2) = {\text{count}(w_1, w_2) \over \sum_{w'_1, w'_2} \text{count}(w'_1, w'_2)}$ *(pour les bigrammes ici)*
+
+**Probabilités conditionnelles.** $p(w_2 | w_1) = {p(w_1, w_2) \over p(w_1)}$ et si $w_1$ et $w_2$ indépendantes on a $p(w_2 | w_1) = p(w_2)$ *(peu probable)*
+
+**Règle 1, "chain rule".** $p(w_1, w_2, w_3) = p(w_1) p(w_2 | w_1) p(w_3 | w_1, w_2)$ etc. On va plutôt utiliser le $\log$ des probabilités (on aura des sommes plutôt que des produits du coup) pour éviter de se retrouver avec des valeurs très vite très petites et difficilement stockables, de plus le calcul sera ainsi plus rapide.
+
+**Règle 2, "Bayes".** $p(x|y) = {p(y|x) p(x) \over p(y)}$
+
+### Rappels
+
+**Espérance.** $E(X) = \sum_x p(x) x = \mu$
+
+**Variance.** $\text{Var}(X) = E((X-E(X))^2) = E(X^2) - E^2(X)$
+
+**Écart-type.** $\text{Var}(X) = \sigma^2$
+
+**Entropie.** $H(X) = \sum_x -p(x) \log_2 p(x)$
+
+L'entropie est utilisée pour calculer la prédictabilité des modèles de langues : plus l'entropie est faible, plus la capacité prédictive est élevée. Elle permet également de trouver la taille d'un codage optimal. Par exemple avec Huffman, on obtient un codage binaire de longueur variable dont la longueur moyenne pour encoder un caractère est proche de l'entropie.
+
+> Les **modèles unigrammes** ne prennent pas en compte l'ordre des mots, ce sont comme des sacs de mots qui ont chacun une probabilité d'apparition mais on ne se préoccupe pas du mot qui précède ou suit chacun des mots d'une phrase.
