Fix coquilles TS CM1

--- a/S8/TS/1.md
+++ b/S8/TS/1.md
@@ -28,7 +28,7 @@ On passe de $x(t)$ à $x[k]$ en échantillonnant à une période ${1 \over F_e} 
 
 > *Notation.* Minuscule en temps, majuscules après transformée
 
-**Théorème de Shannon.** $F_{\max} < {F_e \over 2} ou autrement écrit $F_e > 2F_{\max}$
+**Théorème de Shannon.** $F_{\max} < {F_e \over 2}$, ou autrement écrit $F_e > 2F_{\max}$
 
 ![Illustration du théorème de Shannon](2.jpg)
 
@@ -51,10 +51,13 @@ Grossièrement, c'est une impulsion en 0 avec une aire de 1 (donc pas nécessair
 $k = 0\; \delta[k] = 1$                                 | $\lim\limits_{t \to 0} \delta(t) = + \infty$
 $k \neq 0\; \delta[k] = 0$                              | $t \neq 0\; \delta(t) = 0$
 $\sum\limits_{k=-\infty}^{+\infty} \delta[k] = 1$       | $\int_{-\infty}^{+\infty} \delta(t) dt = 1$
-![Schéma de représentation d'un Dirac numérique](4.jpg) | ![Schéma de représentation d'un Dirac numérique](5.jpg)
+![Schéma de représentation d'un Dirac numérique](5.jpg) | ![Schéma de représentation d'un Dirac analogique](4.jpg)
 
-![Schéma de représentation d'un Dirac décalé](6.jpg)
+![Schéma de représentation d'un Dirac numérique décalé](6.jpg)
+
 #### Échelon
+
+*Grossièrement si on multiplie un signal par un échelon, on "coupe" ce signal en-dessous de $0$.*
 
 $\epsilon[k] = \left\{\begin{array}{ll}
 1, & k \geq 0\\
@@ -145,12 +148,12 @@ $$
 
 > *Remarque.* Connaître $S$ c'est comme connaître tous les paramètres $\{a_n | n=0...N ; b_m | m=0...M\}$.
 
-*Exemple.* Le filtre gradient (dérivée dans $\mathbb{Z}$)
+*Exemple.* Le filtre gradient (dérivée dans $\mathbb{Z}$), *filtre direct*
 
 - $y[k] = x[k] - x[k - 1]$
-- $a_0 = 1$, $a_n = 0$, $b_0 = 1$
-- $b_1 = -1$, $b_n = 0$
-- Ordre 1
+- $a_0 = 1$, $a_{2..n} = 0$
+- $b_0 = 1$, $b_1 = -1$, $b_{2..n} = 0$
+- **Ordre** = max(Ordre 0 *feedback*, ordre 1 *feedforward*) = 1
 
 > L'ordre du filtre correspond à "jusqu'à combien on regarde dans le passé".
 
@@ -158,9 +161,9 @@ Un filtre est dit **récursif** lorsqu'il **utilise les sorties** passées du fi
 
 *Exemple.* Filtre récursif.
 
-- $y[k] = x[k] - y[k - 1] + y[k - 2]$
+- $y[k] = x[k] + y[k - 1] + y[k - 2]$
 - $a_0 = 1$, $a_1 = 1$, $a_2 = 1$
 - $b_0 = 1$
-- Ordre 1
+- **Ordre** = max(Ordre 2 *feedback*, ordre 0 *feedforward*)
 
 .
