TS - moitié - Jeudi 23 Janvier

--- a/S8/TS/1.md
+++ b/S8/TS/1.md
@@ -161,9 +161,87 @@ Un filtre est dit **récursif** lorsqu'il **utilise les sorties** passées du fi
 
 *Exemple.* Filtre récursif.
 
-- $y[k] = x[k] + y[k - 1] + y[k - 2]$
-- $a_0 = 1$, $a_1 = 1$, $a_2 = 1$
+- $y[k] = x[k] - y[k - 1] + y[k - 2]$
+- $a_0 = 1$, $a_1 = 1$, $a_2 = -1$
 - $b_0 = 1$
 - **Ordre** = max(Ordre 2 *feedback*, ordre 0 *feedforward*)
+
+$$
+y[k] = {1 \over a_0}\Big(\sum\limits_{m=0}^{M} b_m x[k-m] - \sum\limits_{n=1}^{N} a_n y[k-n]\Big)
+$$
+
+## Réponse impulsionnelle
+
+La réponse impulsionnelle est la réponse du passage d'un dirac (une impulsion) à travers un système. On obtient $h[k]$.
+
+À partir de $h[k]$, pour tout signal $x[k]$ on peut trouver $y[k]$ en faisant le produit de convolution $x[k]; h[k]$.
+
+$$
+x[k] = \sum\limits_{l=-\infty}^{+\infty} x[l] \delta [k - l]
+$$
+
+$$
+y[k] = S\{x\}[k] = \text{fct}(x[k];h[k]) \text{ avec fct un produit de convolution}
+$$
+
+**Preuve** de la relation entre $y$ et la fonction de convolution :
+
+$$
+\begin{array}{lcl}
+y[k] & = & S\{x\}[k]\\
+ & = & S\Big\{\sum\limits_{l=-\infty}^{+\infty} x[l] \delta[k-l]\Big\}\\
+ & = & \sum\limits_{l=-\infty}^{+\infty} S\Big\{x[l] \delta[k-l]\Big\}\\
+ & = & \sum\limits_{l} x[l] S\{\delta [k - e]\} \\
+ & = & \sum\limits_{l = -\infty}^{+ \infty} x[l]h[k - l]\\
+ & = & \sum\limits_{l = -\infty}^{+ \infty} x[k-l]h[l]\\
+ & = & (x * h)[k]
+\end{array}
+$$
+
+### Rappel analogique
+
+Soit $x(t)$, $h(t)$ :
+
+$$
+\begin{array}{lcl}
+x(t) * h(t) & = & \int_{-\infty}^{+ \infty} x(\tau)h(t - \tau)d\tau\\
+ & = & \int_{-\infty}^{+ \infty} x(t - \tau)h(\tau)d\tau\\
+\end{array}
+$$
+
+### Exemple 1
+
+- Équation aux différences : $y[k] = x[k] - ay[k - 1]$
+- Que vaut $h[k]$ (sachant que $h[-1] = 0$ car c'est un filtre causal) ?
+  - $x[k] = \delta[k]$
+  - $h[0] = \delta[0] - ah[-1] = 1$
+  - $h[1] = \delta[1] - ah[0] = 0 - a \times 1 = -a$
+  - $h[2] = \delta[2] - ah[1] = 0 - a (-a) = a^2$
+  - $h[3] = ... = -a^3$
+  - On devine la régularité : $\boxed{h[k] = (-a)^k \epsilon[k]}$ *($0$ pour $k < 0$)*
+
+**Application** (on cherche à vérifier que les deux méthodes donnent effectivement le même résultat) :
+On choisit $x[k] = \epsilon[k]$ (on appelle le résultat d'un échelon à travers un filtre la **réponse indicielle**).
+
+Avec l'équation aux différences :
+
+- $y[0] = \epsilon[0] - ay[-1] = 1$
+- $y[1] = \epsilon[1] - ay[0] = 1 - a \times 1 = 1 - a$
+- $y[2] = \epsilon[2] - ay[1] = 1 - a (1 - a) = 1 - a + a^2$
+- $y[3] = \epsilon[3] - ay[2] = 1 - a(1 -a + a^2) = 1 - a + a^2 - a^3$
+- $y[k] = 1 - a + a^2 + ... + (-a)^k = \sum\limits_{l=0}^{k} (-a)^l$, $k \geq 0$
+
+Avec la réponse impulsionelle :
+
+Soit $y[k] = \epsilon[k] * h[k]$ et $h[k] = (-a)^k\epsilon[k]$
+
+$$
+y[k] = \sum\limits_{l=- \infty}^{+ \infty} \epsilon[l].h[k -l] = \sum\limits_{l=-\infty}^{+ \infty} \epsilon[k - l].h[l] = \sum\limits_{l=0}^{k} \epsilon[k - l].h[l]
+$$
+
+On peut simplifier les bornes de la somme car $h[l]$ est causal donc $= 0\; \forall l < 0$, et $\epsilon[k - l] = 0\; \forall l > k$. L'échelon $\epsilon$ étant toujours égal à 1 pour la somme avec les nouvelles bornes, plus la peine de le garder dans la formule : $y[k] = \sum\limits_{l = 0}^{k} (-a)^l,\; k\geq 0$
+
+
+
 
 .
