TS - deuxième moitié CM jeudi 23/01

--- a/S8/TS/CM/1/1.md
+++ b/S8/TS/CM/1/1.md
@@ -12,7 +12,7 @@ Cours : <anne.guerin@gipse-lab.grenoble-inp.fr>
 
 TP : <patricia.ladret@gipse-lap.grenoble-inp.fr>
 
-## Signaux numériques
+## Signaux numériques (2.1)
 
 PDF : <https://im2ag-moodle.e.ujf-grenoble.fr/pluginfile.php/42985/mod_resource/content/1/Notes_Cours_2019_Chapitre1.pdf>
 
@@ -124,7 +124,7 @@ $$S\{x[k - k_0]\}[k] = y[k - k_0]$$
 
 > En cours nous allons utiliser des systèmes invariants en temps, mais pas tous causaux.
 
-## Équations aux différences
+## Équations aux différences (2.2)
 
 ```text
 x[k] -> [ S ] -> y[k]
@@ -170,7 +170,7 @@ $$
 y[k] = {1 \over a_0}\Big(\sum\limits_{m=0}^{M} b_m x[k-m] - \sum\limits_{n=1}^{N} a_n y[k-n]\Big)
 $$
 
-## Réponse impulsionnelle
+## Réponse impulsionnelle (2.3)
 
 La réponse impulsionnelle est la réponse du passage d'un dirac (une impulsion) à travers un système. On obtient $h[k]$.
 
@@ -197,6 +197,8 @@ y[k] & = & S\{x\}[k]\\
  & = & (x * h)[k]
 \end{array}
 $$
+
+## Produit de convolution (2.4)
 
 ### Rappel analogique
 
@@ -239,7 +241,41 @@ $$
 y[k] = \sum\limits_{l=- \infty}^{+ \infty} \epsilon[l].h[k -l] = \sum\limits_{l=-\infty}^{+ \infty} \epsilon[k - l].h[l] = \sum\limits_{l=0}^{k} \epsilon[k - l].h[l]
 $$
 
-On peut simplifier les bornes de la somme car $h[l]$ est causal donc $= 0\; \forall l < 0$, et $\epsilon[k - l] = 0\; \forall l > k$. L'échelon $\epsilon$ étant toujours égal à 1 pour la somme avec les nouvelles bornes, plus la peine de le garder dans la formule : $y[k] = \sum\limits_{l = 0}^{k} (-a)^l,\; k\geq 0$
+On peut simplifier les bornes de la somme car $h[l]$ est causal donc $= 0\; \forall l < 0$, et $\epsilon[k - l] = 0\; \forall l > k$. L'échelon $\epsilon$ étant toujours égal à 1 pour la somme avec les nouvelles bornes, plus la peine de le garder dans la formule : $y[k] = \sum\limits_{l = 0}^{k} (-a)^l,\; k\geq 0$.
+
+Preuve par le calcul :
+
+$$
+y[k] = \sum\limits_{l=-\infty}^{+\infty} \epsilon[k - l].h[l] = \sum\limits_{l=-\infty}^{+\infty} \epsilon[k - l] (-a)^{k - l}\epsilon[k - l]
+$$
+
+Or, $\epsilon[l] = 0$ pour $l < 0$ et $\epsilon[k - l] = 0$ pour $k - l < 0$, donc pour $l > k$.
+
+$$
+y[k] = \sum\limits_{l=0}^{k} (-a)^{k - l}
+$$
+
+On veut vérifier si on ne s'est pas trompés. On pose $n = k - l$.
+
+$$
+y[k] = \sum\limits_{l=0}^{k} (-a)^{k - l} = \sum\limits_{n=k}^{n=0} (-a)^{n} = \boxed{\sum\limits_{n=0}^{n=k} (-a)^{n}}
+$$
+
+> *Remarque.* Le **produit** de convolution est **stable** : le produit de 2 signaux causaux est un signal causal. Et son **élément neutre** est $\delta[k]$ : $x[k] * \delta[k] = x[k]$ (pour s'en convaincre on peut faire l'application pour $x[k]$ ou pour $x[k - k_0]$).
+
+## Stabilité "EBSB" (2.5)
+
+**EBSB.** Entrée Bornée, Sortie Bornée $\Leftrightarrow$ sa réponse impultionnelle est absolument sommable $\Leftrightarrow$ $\sum\limits_{k=-\infty}^{+\infty} |h[k]| < M$ donc borné, converge.
+
+## Filtrage récursif et non récursif (2.9)
+
+1. $y[k] = \sum\limits_{m=0}^{M} b_m x[k - m] - 0$ (filtre direct)
+2. $y[k] = \sum\limits_{l=-\infty}^{+\infty} x[l] h[k - l] = \sum\limits_{l=0}^{M} h[l] x[k - l]$
+
+D'où $b_m = h[l]$ (dans la deuxième formule) pour un filtre direct.
+
+*Exemple.* Soit $h[1] = 1$ et $h[5] = -3$ on peut trouver l'équation aux différences : $y[k] = h[0]x[0] + h[1]x[1] + ... + h[5]x[5] = x[k] - x[k - 1]$.
+
 
 
 
