SI - Mardi 28 Janvier

--- a/SI/CM/1/1.md
+++ b/SI/CM/1/1.md
@@ -96,9 +96,10 @@ En plus du fragment et vertex shader, il existe geometry et tesselation shader.
 ## Transformation 3D -> 2D / Perspective
 
 **Slide :** <http://www-evasion.imag.fr/~Georges-Pierre.Bonneau/COURS_CG/Cours2_PERSPECTIVE.pdf>
---> nouveau fichier/chapitre ?
 
-## Points, vecteurs et perspective
+> **Z-buffer.** Il faut choisir un bon frustrum pour ne pas couper des informations importantes (si le plan se trouve au milieu d'un objet par exemple) et ne pas avoir des aberrations (si le frustrum est trop grand typiquement).
+
+### Points, vecteurs et perspective
 
 **Slide :** <http://www-evasion.imag.fr/~Georges-Pierre.Bonneau/COURS_CG/Cours2_GEOMETRIE_COORDONNEES_HOMOGENES.pdf>
 
@@ -114,9 +115,67 @@ typedef Vecteur float[2];
 - Vecteur CL Vecteur = Vecteur
 - Point CL Vecteur = Point (déplacé)
 - Point CL Point = autorisé seulement si combinaison barycentrique (la somme des coefficients vaut 1)
--
 
+### Écriture matricielle homogène
 
+Pour distinguer un vecteur d'un point on ajoute une dimension avec $0$ si c'est un vecteur et $1$ si c'est un point. $(a, b, w)$ si $w \neq 0$ en écriture homogène représente le point $(a/w, b/w)$ en écriture cartésienne.
+
+$$
+Q = MP+A \Leftrightarrow
+\begin{pmatrix}
+x_2 \\
+y_2 \\
+0 \text{ ou } 1 \\
+\end{pmatrix} =
+\begin{bmatrix}
+m_{11} & m_{12} & a_x \\
+m_{21} & m_{22} & a_y \\
+0 & 0 & 1 \\
+\end{bmatrix}
+\begin{pmatrix}
+x_1 \\
+y_1 \\
+0 \text{ ou } 1\\
+\end{pmatrix}
+$$
+
+> $A$ correspond à la translation, $M$ correspond à une transformation affine qui peut être un peu tout et n'importe quoi (rotation, scale, etc.).
+
+L'avantage de cette écriture est que lorsqu'on multiplie cette matrice par un point, on aura bien une translation du point par $(a_x, a_y)$ : $\begin{pmatrix} MP+A \\ 1 \\ \end{pmatrix}$ ; tandis que si c'est un vecteur, on aura uniquement rotation / scale sans translation : $\begin{pmatrix} MP \\ 0 \\ \end{pmatrix}$.
+
+> **Remarque.** `glm`, librairie de maths + matrices pour OpenGL
+
+- Matrice de la fonction `translate(vx, vy, vz)` :
+
+$$\begin{pmatrix}
+1 & 0 & 0 & v_x \\
+0 & 1 & 0 & v_y \\
+0 & 0 & 1 & v_z \\
+0 & 0 & 0 & 1
+\end{pmatrix}$$
+
+- Matrice de la fonction `rotate(angle, axeRotationVec3)` :
+
+$$
+\texttt{rotate(} \theta \texttt{, vec3(}0, 0, 1 \texttt{)) = } \begin{pmatrix}
++\cos \theta & -\sin \theta & 0 & 0 \\
++\sin \theta & +\cos \theta & 0 & 0 \\
+0 & 0 & 1 & 0 \\
+0 & 0 & 0 & 1
+\end{pmatrix}
+$$
+
+ Le **Z buffer** correspond aux tranches de profondeur que l'on choisis pour le rendu. Le nombre de tranches correspond au nombre de bits qu'on alloue à ce buffer : **8 bits = 256 tranches** par exemple. Si l'on éloigne beaucoup le plan proche du plan lointain, les tranches sont très épaisses et le rendu peut faire les mauvaise décisions : mettre devant quelque chose qui est derrière en réalité mais dans la même tranche dans ce cas particulier.
+
+## Transformations
+
+ **Slide :** <http://www-evasion.imag.fr/~Georges-Pierre.Bonneau/COURS_CG/Cours3_Transformations.pdf>
+
+Pour placer le repère objet dans le repère monde : `glm::translate`, `glm::scale`, `glm::rotate`.
+
+Pour placer la caméra : `glm::lookat`, un point (la position de l'oeil) et deux vecteurs (direction du regard, direction du "haut" ~ si on est penché ou droit).
+
+Pour la projection : `glm::frustrum`.
 
 
 .
