RI - CM et TD du 30/01/2020

--- a/RI/CM/1/1.md
+++ b/RI/CM/1/1.md
@@ -91,7 +91,7 @@ $$
 > - Un **terme peu discriminant** se trouve dans beaucoup de documents, ce qui ne va pas être très utile pour les filtrer : **$p_{df} \simeq 0$**
 > - À l'inverse, un **terme très discriminant** se trouve dans très peu de documents, ce qui va être utile pour les filtrer : **$p_{df} >> 0$**. *Si on cherche un de ces documents à l'aide de ce terme on n'aura que peu de résultats dans lesquels fouiller.*
 
-La normalisation vise à régler le problème de **taille de document** : donner autant d'importance aux documents courts qu'aux documents long (qui ont de par leur nature des poids plus grands).  
+La normalisation vise à régler le problème de **taille de document** : donner autant d'importance aux documents courts qu'aux documents long (qui ont de par leur nature des poids plus grands).
 
 En cours on choisit :
 
@@ -99,8 +99,8 @@ En cours on choisit :
 - $p_{df_{t_i}} = idf_{t_i}( = ln {N \over df_{t_i}})$, avec $N$ le nombre de documents dans le corpus.
 - $n_d = 1$
 
+**Index inversé.** Structure de données qui fait correspondre chaque terme du vocabulaire à la liste des documents qui le contiennent.
 
-
-
-
-.
+  - Très efficace pour la recherche
+  - Construction avec une table de hachage ou un arbre
+    - Si mémoire insuffisante dans la RAM, on applique l'algorithme *Blocked sort-based indexing* (ou BSBI)
