RI - Mardi 04 Janvier

--- a/RI/TD/1/1.md
+++ b/RI/TD/1/1.md
@@ -64,10 +64,12 @@ Représentation vectorielle des documents avec des pondérations binaires pour $
 ## Exercice 3 -- Indexation vectorielle
 
 1. Anti-dictionnaire
-   - $d_1$ : professeur parle recherche information textuelle
-   - $d_2$ : recherche information domaine recherche intéresse nombreux problèmes
-   - $d_3$ : modèle vectoriel recherche information modèle simple comprendre
-2. Calcul des $pft$ à base de $tf
+
+  - $d_1$ : professeur parle recherche information textuelle
+  - $d_2$ : recherche information domaine recherche intéresse nombreux problèmes
+  - $d_3$ : modèle vectoriel recherche information modèle simple comprendre
+2. Calcul des $pft$ à base de $tf$
+
   - $d_1$
     - 1 : professeur, parle, recherche, information, textuelle
   - $d_2$
@@ -76,7 +78,9 @@ Représentation vectorielle des documents avec des pondérations binaires pour $
   - $d_3$
     - 2 : modèle
     - 1 : vectoriel, recherche, information, simple, comprendre
+
 3. Calcul des $pdf$ à base d'$idf$ : $\ln({N \over df_{t_i}})$ (nombre de documents du corpus / nombre de documents dans lesquels le mot apparaît) :
+
   - comprendre : $\ln({3 \over 1}) = \ln 3$
   - domaine : $\ln({3 \over 1}) = \ln 3$
   - information : $\ln({3 \over 3}) = \ln 1 = 0$
@@ -90,6 +94,67 @@ Représentation vectorielle des documents avec des pondérations binaires pour $
   - simple : $\ln({3 \over 1}) = \ln 3$
   - textuelle : $\ln({3 \over 1}) = \ln 3$
   - vectoriel : $\ln({3 \over 1}) = \ln 3$
+4. Vocabulaire initial :
 
+  - $t_1$ comprendre
+  - $t_2$ domaine
+  - $t_3$ information
+  - $t_4$ intéresse
+  - $t_5$ modèle
+  - $t_6$ nombreux
+  - $t_7$ parle
+  - $t_8$ problèmes
+  - $t_9$ professeur
+  - $t_10$ recherche
+  - $t_11$ simple
+  - $t_12$ textuelle
+  - $t_13$ vectoriel
+
+  Suivant ce vocabulaire de 13 termes, les vecteurs avec les poids ($ptf \times pdf$) sont :
+
+  - $d_1 =$ `(   0    0    0    0    0    0 1.10    0 1.10    0    0 1.10    0)`
+  - $d_2 =$ `(   0 1.10    0 1.10    0 1.10    0 1.10    0    0    0    0    0)`
+  - $d_3 =$ `(1.10    0    0    0 2.20    0    0    0    0    0 1.10    0 1.10)`
+
+  Et l'index inversé qui en découle :
+
+_      | $d_1$ | $d_2$ | $d_3$
+-------|-------|-------|------
+$t_1$  | 0     | 0     | 1.10
+$t_2$  | 0     | 1.10  | 0
+$t_3$  | 0     | 0     | 0
+$t_4$  | 0     | 1.10  | 0
+$t_5$  | 0     | 0     | 2.20
+$t_6$  | 0     | 1.10  | 0
+$t_7$  | 1.10  | 0     | 0
+$t_8$  | 0     | 1.10  | 0
+$t_9$  | 1.10  | 0     | 0
+$t_10$ | 0     | 0     | 0
+$t_11$ | 0     | 0     | 1.10
+$t_12$ | 1.10  | 0     | 0
+$t_13$ | 0     | 0     | 1.10
+
+  On exclut les termes qui n'indexent aucun document ($t_3$ et $t_10$ car $pdf = 0$) on se retrouve donc avec non plus $13$ mais $11$ termes/dimensions on a le tableau $V$ :
+
+_      | $d_1$ | $d_2$ | $d_3$
+-------|-------|-------|------
+$t_1$  | 0     | 0     | 1.10
+$t_2$  | 0     | 1.10  | 0
+$t_4$  | 0     | 1.10  | 0
+$t_5$  | 0     | 0     | 2.20
+$t_6$  | 0     | 1.10  | 0
+$t_7$  | 1.10  | 0     | 0
+$t_8$  | 0     | 1.10  | 0
+$t_9$  | 1.10  | 0     | 0
+$t_11$ | 0     | 0     | 1.10
+$t_12$ | 1.10  | 0     | 0
+$t_13$ | 0     | 0     | 1.10
+
+  On peut ainsi calculer la norme de chacun des documents :
+
+  - $||d_i|| = \sqrt{\sum_{i} V[i]^2}$
+  - $||d_1|| = 1.91$
+  - $||d_2|| = 2.20$
+  - $||d_3|| = 2.91$
 
 .
