TS - Jeudi 30 Janvier

--- a/TS/CM/1/1.md
+++ b/TS/CM/1/1.md
@@ -157,7 +157,7 @@ $$
 
 > L'ordre du filtre correspond à "jusqu'à combien on regarde dans le passé".
 
-Un filtre est dit **récursif** lorsqu'il **utilise les sorties** passées du filtre pour calculer le présent. Sinon, le filtre est dit **direct**.
+Un filtre est dit **récursif** lorsqu'il **utilise les sorties** passées du filtre pour calculer le présent. Sinon, le filtre est dit **direct** ou non récursif ou à **Réponse Impultionnelle Finie** (voir 2.6).
 
 *Exemple.* Filtre récursif.
 
@@ -267,7 +267,7 @@ $$
 
 **EBSB.** Entrée Bornée, Sortie Bornée $\Leftrightarrow$ sa réponse impultionnelle est absolument sommable $\Leftrightarrow$ $\sum\limits_{k=-\infty}^{+\infty} |h[k]| < M$ donc borné, converge.
 
-## Filtrage récursif et non récursif (2.9)
+## Filtrage récursif et non récursif (2.6, ex 2.9)
 
 1. $y[k] = \sum\limits_{m=0}^{M} b_m x[k - m] - 0$ (filtre direct)
 2. $y[k] = \sum\limits_{l=-\infty}^{+\infty} x[l] h[k - l] = \sum\limits_{l=0}^{M} h[l] x[k - l]$
@@ -277,7 +277,113 @@ D'où $b_m = h[l]$ (dans la deuxième formule) pour un filtre direct.
 *Exemple.* Soit $h[1] = 1$ et $h[5] = -3$ on peut trouver l'équation aux différences : $y[k] = h[0]x[0] + h[1]x[1] + ... + h[5]x[5] = x[k] - x[k - 1]$.
 
 
+Équation de convolution ($x[k]$ causal, $h[k]$ causal $\Rightarrow$ $y[k]$ causal) :
+
+$$
+y[k] = (x*h)[k] = \sum\limits_{l=-\infty}^{+\infty} x[l] h[k - l] = \sum\limits_{l=\boxed{0}}^{\boxed{k}} x[l] h[k - l]
+$$
+
+Pour les filtres directs (la partie avec les $a_n$ n'existe pas ici) :
+
+$$
+y[k] = \sum\limits_{m=0}^{M} b_m x[b - m] = \sum\limits_{l=0}^{k} x[l] h[k - l]  
+$$
+
+> **Remarque.** Un filtre est dit direct ou non récursif ou à réponse impulsionelle finie (**RIF**) car à partir d'un certain rang $k$, sa réponse impultionnelle vaut $0$.
+
+> **Remarque.** Un filtre récursif est à réponse impulsionelle infinie (**RII**).
+
+*Rappel.*
+
+- RIF : $y[k] = \sum\limits_{m = 0}^M b_m x[k - m] - \sum\limits_[n = 1]^N a_n y[k - n]$ (temps de calcul proportionnel au $k$)
+- RII : $y[k] = \sum\limits_{l = 0}^k x[l] h[k - l] = \sum\limits_[l = 0]^k x[k - l] h[l] = (x*h)[k]$ (temps de calcul rapide pour petit $k$)
+
+## Réponse en fréquence (2.7)
+
+**En temps :**
+
+```text
+x[k] -> [ S ] -> y[k] = S{x}[k]
+```
+
+- Équation aux différences
+- Réponse impulsionelle $h[k]$
+
+**En fréquence :**
+
+$\text{TF}\{x[k]\}(f)=X(f)$ avec $f[Hz]$ fréquence
+
+Une seule équation à retenir, la TF continue :
+
+$$
+x(t) \leftrightarrow X(f) = \int_{- \infty}^{+ \infty} \boxed{x}(t) \exp (\boxed{-}2 \pi j f t) dt
+$$
+
+$$
+X(t) \leftrightarrow x(t) = \int_{-\infty}^{+\infty} \boxed{X}(f) \exp (\boxed{+} 2\pi jft)df
+$$
+
+Pour passer à la TF temps discret (**TFTD**), on passe d'intégrale à somme et on utilise les $T_e$ ($t = kT_e$) :
+
+$$
+X(f) = \sum\limits_{k=-\infty}^{=\infty} x(kT_e)\exp (-2\pi jkT_e) = \sum\limits_{k=-\infty}^{+\infty} x[k] \exp (-2 \pi {f \over F_e}k)  
+$$
+
+> **Rappel.** $T_e = {1 \over F_e}$
+
+**Fréquence réduite.** $\lambda = {f \over F_e}$ la fréquence "normalisée"
+
+**Prop.** $X(f + F_e) = X(f)$ l'échantillonage a périodisé (de période $F_e$) le spectre de fréquences.
 
 
+$$
+X(\lambda) = \sum\limits_{k=-\infty}^{+\infty} x[k] \exp (-2 \pi j \lambda k)
+$$
+
+**Périodicité 1.**
+
+$$
+X(\lambda + 1) = X(\lambda)
+$$
+
+**TF de $y$ produit des TF.**
+$$
+Y(\lambda) = \sum\limits_{k=-\infty}^{+\infty} y[k] \exp (-2 \pi j \lambda k)
+$$
+
+
+$$
+y[k] = (x * h)[k]
+$$
+
+$$
+\begin{array}{lcl}
+TF\{y[k]\}(f) & = & TF\{(x * h)[k]\}(f)\\
+ & = & TF\{x[k]\}\times TF\{h[k]\}(f)\\
+ Y(f) & = & X(f) \times H(f)
+\end{array}
+$$
+
+**$y$ à partir de la TF inverse.**
+$$
+y[k] = TF^{-1}\{Y(f)\}[k]
+$$
+
+**TF inverse (TFTD$^{-1}$).**
+$$
+\begin{array}{lcl}
+x[k] & = & {1 \over F_e} \int_{-F_e \over 2}^{+ F_e \over 2} X(f) \exp (-2 \pi j {f \over F_e})df \\
+ & = & T_e \int_{-F_e \over 2}^{+ F_e \over 2} X(f) \exp (-2 \pi j {f \over F_e})df \\
+ & = & \int_{-0.5}^{+ 0.5} X(\lambda ) \exp (-2 \pi j \lambda k)d \lambda \\
+\end{array}
+$$
+
+**Exemple.**
+$$
+\left\{\begin{array}{lcl}
+h(\lambda) & = & \\
+ & = & \\
+\end{array}\right.
+$$
 
 .
