--- a/CL/1.md
+++ b/CL/1.md
@@ -85,3 +85,11 @@ Unicode et Python : <https://docs.python.org/2/howto/unicode.html>
 L'entropie est utilisée pour calculer la prédictabilité des modèles de langues : plus l'entropie est faible, plus la capacité prédictive est élevée. Elle permet également de trouver la taille d'un codage optimal. Par exemple avec Huffman, on obtient un codage binaire de longueur variable dont la longueur moyenne pour encoder un caractère est proche de l'entropie.
 
 > Les **modèles unigrammes** ne prennent pas en compte l'ordre des mots, ce sont comme des sacs de mots qui ont chacun une probabilité d'apparition mais on ne se préoccupe pas du mot qui précède ou suit chacun des mots d'une phrase.
+
+### Évènements inconnus
+
+**Première approche simple.** Pour les évènements inconnus on leur donne une probabilité $\epsilon$ proche de zéro mais non nulle afin de ne pas mettre à zéro les phrases qui les contiennent.
+
+**Deuxième approche plus poussée.** On peut avoir deux types de zéros : pour les mots inconnus et pour les n-grammes inconnus.
+
+Si on donne des valeurs non nulles ce n'est plus une estimation par maximum de vraisemblance, la somme ne vaut pas $1$ : pour contourner ce problème, on "tasse" les probabilités connues à $0,99$ (par exemple) et on se réserve $0,01$ (toujours dans l'exemple) pour les évènements inconnus, ainsi la somme vaut toujours $1$.
