RI - Pandoc CM 1 + TD 1

--- a/RI/CM/1/1.md
+++ b/RI/CM/1/1.md
@@ -40,6 +40,8 @@ La **normalisation textuelle** rend les mots d’une même famille sous leur **f
 
 La **loi de Heaps** et la **loi de Zipf**.
 
+\newpage
+
 ### Exercices
 
 Prenons la collection Wikipédia vue plus haut.
@@ -48,7 +50,7 @@ Prenons la collection Wikipédia vue plus haut.
 
 > $$fc_{\text{exp}}(...)$$ est la fréquence expérimentale d'un mot.
 
-Soit $M = \text{# total d'occurences des mots} = 696 668 157$.
+Soit $M = \text{\# total d'occurences des mots} = 696 668 157$.
 
 $$
 P_{\text{exp}}(\text{"de"}) = {fc_{\text{exp}}(\text{"de"}) \over M} = {36 875 868 \over 696 668 157} = 0.053
@@ -56,7 +58,7 @@ $$
 
 2. Estimation *théorique* du nombre d'apparition du mot ***de*** dans la collection ?
 
-Soit $M_y = \text{# total de mots} = 757 476$.
+Soit $M_y = \text{\# total de mots} = 757 476$.
 
 $$
 \lambda = {M \over ln(M_y)} = {696 668 157 \over ln(757 476)} = 51 461 158.95
@@ -73,6 +75,8 @@ On a une marge d'erreur de l'ordre de $0,7$.
 $$
 P_{exp}(\text{ de }) * 416 = 0,053 * 416 = 22
 $$
+
+\newpage
 
 ## Représentation vectorielle des documents
 
