--- a/RI/TD/1/1.md
+++ b/RI/TD/1/1.md
@@ -34,6 +34,8 @@ $$
 
 > **Interpétation.** $w_{\text{deux}, d}$ n'est pas deux fois supérieur à $w_{\text{un}, d}$ même si il est deux fois plus présent dans le document $d$ car le mot deux est présent dans beaucoup de documents. Il perd ainsi de l'importance car une recherche qui renvoie beaucoup de résultats est moins pertinente.
 
+\newpage
+
 ## Exercice 2 -- Représentation vectorielle
 
 - Vocabulaire $V0$ : football, corners, penalties, sport, penalty, coupe, sports, coupes, rugby, collectif, corner
@@ -60,6 +62,8 @@ Représentation vectorielle des documents avec des pondérations binaires pour $
 - $d_1 = (0, 1, 0, 1, 1, 0, 0)$
 - $d_2 = (0, 0, 1, 1, 1, 0, 1)$
 - $d_3 = (1, 1, 1, 0, 0, 1, 1)$
+
+\newpage
 
 ## Exercice 3 -- Indexation vectorielle
 
