--- a/SI/TP/3/3.md
+++ b/SI/TP/3/3.md
@@ -116,7 +116,11 @@ colors.push_back(vec3(  1, 0.5,   1));
 
 ## Maillage
 
+Nous avons chargé différentes images à l'aide de la classe `Mesh`. Pour les afficher, nous avons copié les données de `m.vertices` dans le buffer `vertexBufferID`, les données de `m.normals`, dans le buffer `normalsBuferID` et les données de `m.faces` dans le buffer `indiceBufferID`.
 
+![Armadillo](img/armadillo.png)
+
+![Dragon](img/dragon.png)
 
 
 .
